add GetAccoutForUpdate that lock row for update to prevent TOCTOU races rather than using GetAccount, implement ReconcileAccount endpoint to verifies stores bal, handle decimal input in rather than string value, proper swagger doc reponse handled
